add profile links

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,5 @@
 @misc{babich_lattice_2021,
-  title = {Lattice Contraction Induced by Resistive Switching in Chromium-Doped {{V2O3}}: A Hallmark of {{Mott}} Physics},
+  title = {Lattice Contraction Induced by Resistive Switching in Chromium-Doped {{V}}{\textsubscript{2}}{{O}}{\textsubscript{3}}: A Hallmark of {{Mott}} Physics},
   shorttitle = {Lattice Contraction Induced by Resistive Switching in Chromium-Doped {{V2O3}}},
   author = {Babich, Danylo and Tranchant, Julien and Adda, Coline and Corraze, Benoit and Besland, Marie-Paule and Warnicke, Peter and Bedau, Daniel and Bertoncini, Patricia and Mevellec, Jean-Yves and Humbert, Bernard and Rupp, Jonathan A. J. and Hennen, Tyler and Wouters, Dirk J. and Llopis, Roger and Cario, Laurent and Janod, Etienne},
   year = {2021},
