More visually pleasing publication list

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -58,7 +58,8 @@
   pages = {100301},
   issn = {26659638},
   doi = {10.1016/j.simpa.2022.100301},
-  langid = {english}
+  langid = {english},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for hellerstedt_counting_2022:
 % ? unused Library catalog ("DOI.org (Crossref)")
@@ -85,6 +86,7 @@
   title = {Current-Limiting Amplifier for High Speed Measurement of Resistive Switching Data},
   author = {Hennen, Tyler and Wichmann, Erik and Elias, Alexander and Lille, Jeffrey and Mosendz, Oleksandr and Waser, Rainer and Wouters, Dirk J. and Bedau, Daniel},
   year = {2021},
+  month = may,
   journal = {Review of Scientific Instruments},
   volume = {92},
   pages = {054701},
@@ -99,6 +101,7 @@
   booktitle = {{{IEEE International Electron Devices Meeting}} ({{IEDM}})},
   author = {Hennen, Tyler and Bedau, Daniel and Rupp, Jonathan A. J. and Funck, Carsten and Menzel, Stephan and Grobis, Michael K. and Waser, Rainer and Wouters, Dirk J.},
   year = {2018},
+  month = dec,
   pages = {37.5.1-37.5.4},
   address = {San Francisco, CA, USA},
   doi = {10.1109/IEDM.2018.8614618},
@@ -113,6 +116,7 @@
   title = {Harnessing Stochasticity and Negative Differential Resistance for Unconventional Computation},
   author = {Hennen, Tyler},
   year = {2023},
+  month = jul,
   journal = {Dissertation},
   volume = {Rheinisch-Westf{\"a}lische Technische Hochschule Aachen},
   pages = {pages 1 Online-Ressource : Illustrationen, Diagramme},
@@ -120,7 +124,8 @@
   collaborator = {Waser, Rainer and Gemmeke, Tobias},
   langid = {english},
   school = {RWTH Aachen University},
-  keywords = {Hochschulschrift}
+  keywords = {Hochschulschrift},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for hennen_harnessing_2023:
 % ? unused Library catalog ("DOI.org (Datacite)")
@@ -135,7 +140,8 @@
   volume = {16},
   pages = {941753},
   issn = {1662-453X},
-  doi = {10.3389/fnins.2022.941753}
+  doi = {10.3389/fnins.2022.941753},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for hennen_high_2022:
 % ? unused Journal abbreviation ("Front. Neurosci.")
@@ -184,12 +190,14 @@
   shorttitle = {Synaptogen},
   author = {Hennen, Tyler and Brackmann, Leon and Ziegler, Tobias and Siegel, Sebastian and Menzel, Stephan and Waser, Rainer and Wouters, Dirk J. and Bedau, Daniel},
   year = {2024},
+  month = jul,
   journal = {IEEE Transactions on Electron Devices},
   pages = {1--9},
   issn = {0018-9383, 1557-9646},
   doi = {10.1109/TED.2024.3427616},
   copyright = {https://creativecommons.org/licenses/by/4.0/legalcode},
-  langid = {english}
+  langid = {english},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for hennen_synaptogen_2024:
 % ? Title looks like it was stored in title-case in Zotero
@@ -244,7 +252,8 @@
   pages = {2400040},
   issn = {2751-1200, 2751-1200},
   doi = {10.1002/apxr.202400040},
-  langid = {english}
+  langid = {english},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for mohr_bulklike_2024:
 % ? unused Library catalog ("DOI.org (Crossref)")
@@ -259,7 +268,8 @@
   pages = {2200008},
   issn = {2751-1200, 2751-1200},
   doi = {10.1002/apxr.202200008},
-  langid = {english}
+  langid = {english},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for mohr_fabrication_2022:
 % ? Title looks like it was stored in title-case in Zotero
@@ -275,7 +285,8 @@
   pages = {2300405},
   issn = {1862-6300, 1862-6319},
   doi = {10.1002/pssa.202300405},
-  langid = {english}
+  langid = {english},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for mohr_physical_2023:
 % ? Title looks like it was stored in title-case in Zotero
@@ -310,7 +321,8 @@
   pages = {234901},
   issn = {0021-8979, 1089-7550},
   doi = {10.1063/5.0214036},
-  langid = {english}
+  langid = {english},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for stasner_full_2024:
 % ? unused Library catalog ("DOI.org (Crossref)")
@@ -320,11 +332,13 @@
   title = {Reliability Effects of Lateral Filament Confinement by Nano-Scaling the Oxide in Memristive Devices},
   author = {Stasner, Pascal and Kopperberg, Nils and Schnieders, Kristoffer and Hennen, Tyler and Wiefels, Stefan and Menzel, Stephan and Waser, Rainer and Wouters, Dirk J.},
   year = {2024},
+  month = mar,
   journal = {Nanoscale Horizons},
   pages = {10.1039.D3NH00520H},
   issn = {2055-6756, 2055-6764},
   doi = {10.1039/D3NH00520H},
-  langid = {english}
+  langid = {english},
+  annotation = {Open-access}
 }
 % == BibTeX quality report for stasner_reliability_2024:
 % ? unused Journal abbreviation ("Nanoscale Horiz.")
@@ -348,16 +362,17 @@
 % ? unused Library catalog ("Crossref")
 % ? unused Url ("http://aip.scitation.org/doi/10.1063/5.0003840")
 
-@article{wouters_universality_2019,
+@article{wouters_universality_2018,
   title = {On the Universality of the {{I}} -- {{V}} Switching Characteristics in Non-Volatile and Volatile Resistive Switching Oxides},
   author = {Wouters, Dirk J. and Menzel, Stephan and Rupp, Jonathan A. J. and Hennen, Tyler and Waser, Rainer},
-  year = {2019},
+  year = {2018},
+  month = jun,
   journal = {Faraday Discussions},
   issn = {1359-6640, 1364-5498},
   doi = {10.1039/C8FD00116B},
   langid = {english}
 }
-% == BibTeX quality report for wouters_universality_2019:
+% == BibTeX quality report for wouters_universality_2018:
 % ? unused Library catalog ("Crossref")
 % ? unused Url ("http://xlink.rsc.org/?DOI=C8FD00116B")
 
